Unsubscribe from all subscriptions. List sorting PageHeaderComponent created!
